--- a/css/smart.css
+++ b/css/smart.css
@@ -257,12 +257,11 @@ h2 {
 /*-----------------------footer------------------------*/
 
 footer {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  height: 4.4rem;
   background-color: rgb(0, 0, 0);
-  height: 2.4%;
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  text-align: center;
 }
 
 footer p {
